
= volute - CHANGELOG.txt


== volute - 0.1.1    not yet released

- Volute.apply(object, attribute=nil, previous_value=nil, value=nil)
- volutes /regex_on_attribute_name/ { ... }
- volutes :not, args { ... }
- volutes.remove(Financing) for removing top-level volutes
- volutes(arg) for querying the top-level volutes
- enforced guard listing <=> OR and volute nesting <=> AND


== volute - 0.1.0    released 2010/10/07

- initial release
