@@ -6,8 +6,6 @@
 # but please remember that Ruleby is a Rete implementation and is thus
 # vastly superior to what is implemented here
 
-# NOTE : this example doesn't work for now, it's an exploration
-
 $:.unshift(File.join(File.dirname(__FILE__), '..', 'lib'))
 
 require 'volute'
@@ -19,13 +17,15 @@ require 'volute'
 class Patient
 
   attr_reader :name
-  attr_reader :symptoms, {}
-  attr_accessor :innoculated, false
+  attr_reader :symptoms
+  attr_accessor :innoculated
   attr_accessor :diagnosis
 
   def initialize(name)
 
     @name = name
+    @symptoms = {}
+    @innoculated = false
   end
 
   def diagnose!
@@ -49,21 +49,38 @@ end
 # the volutes
 
 volute Patient do
-  volute :state, :fever => :high, :spots => :true, :innoculated => true do
+
+  # These volutes are 'state' volutes, they trigger if all the attributes
+  # mentioned as keys yield the given value.
+  # unlike classical volutes that act as OR, these states volutes have an
+  # AND behaviour.
+
+  volute :fever => :high, :spots => :true, :innoculated => true do
     object.diagnosis = 'measles'
     over # prevent further evals
   end
-  volute :state, :spots => :true do
+  volute :spots => true do
     object.diagnosis = 'allergy (spots but no measles)'
   end
-  volute :state, :rash => :true do
+  volute :rash => true do
     object.diagnosis = 'allergy (rash)'
   end
-  volute :state, :sore_throat => true, :fever => :mild do
+  volute :sore_throat => true, :fever => :mild do
     object.diagnosis = 'flu'
   end
-  volute :state, :sore_throat => true, :fever => :high do
+  volute :sore_throat => true, :fever => :high do
     object.diagnosis = 'flu'
   end
 end
+
+pat = Patient.new('alice')
+pat.symptoms[:rash] = true
+
+puts "#{pat.name} : diagnosed with #{pat.diagnose!}"
+
+pat = Patient.new('bob')
+pat.symptoms[:sore_throat] = true
+pat.symptoms[:fever] = :high
+
+puts "#{pat.name} : diagnosed with #{pat.diagnose!}"
 
