@@ -24,6 +24,7 @@ placing some [business] logic outside of classes
      "README.rdoc",
      "Rakefile",
      "TODO.txt",
+     "examples/diagnosis.rb",
      "examples/equation.rb",
      "examples/light.rb",
      "examples/state_machine.rb",
@@ -32,6 +33,7 @@ placing some [business] logic outside of classes
      "spec/apply_spec.rb",
      "spec/filter_not_spec.rb",
      "spec/filter_spec.rb",
+     "spec/filter_state_spec.rb",
      "spec/include_volute_spec.rb",
      "spec/over_spec.rb",
      "spec/spec_helper.rb",
@@ -49,11 +51,13 @@ placing some [business] logic outside of classes
     "spec/apply_spec.rb",
      "spec/filter_not_spec.rb",
      "spec/filter_spec.rb",
+     "spec/filter_state_spec.rb",
      "spec/include_volute_spec.rb",
      "spec/over_spec.rb",
      "spec/spec_helper.rb",
      "spec/volute_spec.rb",
      "spec/volutes_spec.rb",
+     "examples/diagnosis.rb",
      "examples/equation.rb",
      "examples/light.rb",
      "examples/state_machine.rb",
